@@ -1,5 +1,11 @@
 2013-01-21  Colin Watson  <cjwatson@ubuntu.com>
 
+	* grub-core/font/font.c (blit_comb: do_blit): Make static instead of
+	nested.
+	(blit_comb: add_device_width): Likewise.
+
+2013-01-21  Colin Watson  <cjwatson@ubuntu.com>
+
 	Remove nested functions from USB iterators.
 
 	* include/grub/usb.h (grub_usb_iterate_hook_t): New type.
